overflow fix

--- a/src/stylesheets/components/_periodicTable.scss
+++ b/src/stylesheets/components/_periodicTable.scss
@@ -4,6 +4,10 @@
     .inline {
         position: relative;
         width: 100%;
+
+        @include respond-to('large') {
+            width: auto;
+        }
     }
 
     .table li {
